tests/baselines/reference/superWithTypeArgument3.errors.txt
==== tests/cases/compiler/superWithTypeArgument3.ts (3 errors) ====
    class C<T> {
        foo: T;
        bar<U>(x: U) { }
    }
    
    class D<T> extends C<T> {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
            super<T>();
                 ~
!!! error TS1005: '.' expected.
            ~~~~~
!!! error TS2158: Untyped function calls may not accept type arguments.
        }
        bar() {
            super.bar<T>(null);
        }
    }